--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,6 +40,66 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
+
+#max {
+    width: 900px;
+    height: 500px;
+    align-items: center;
+    margin: 5% auto;
+    margin-top: 0%;
+}
+
+.re {
+    position: relative;
+    height: 400px;
+}
+
+.re ul {
+    list-style-type: none;
+}
+
+.re ul>li {
+    width: 600px;
+    height: 300px;
+    position: absolute;
+
+    transition: 1s;
+    opacity: 0;
+}
+
+.re ul>li img {
+    width: 900px;
+    height: 500px;
+    border-radius: 10%;
+    border: 15px solid #fffbd6;
+}
+
+#max ol {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(5, 75px);
+    grid-template-rows: auto;
+    grid-gap: 1em;
+    gap: 1em;
+    float: right;
+    margin-top: 450px;
+    list-style: none;
+    top: 0;
+    left: 0;
+}
+
+#max ol li {
+    width: 25px;
+    height: 10px;
+    font-size: 15px;
+    line-height: 20px;
+    float: left;
+    text-align: center;
+    border-radius: 2em;
+    border: 5px solid #999999;
+}
+
+
 .paper-box {
     display: flex;
     justify-content: left;
@@ -48,7 +108,6 @@
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
     padding: 2em 0 2em 0;
-    
 
     .paper-box-image{
         justify-content: center;
@@ -107,3 +166,4 @@ h1:before, .anchor:before {
     background-color: #00369f;
     font-size: .8em;
 }
+
