--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,40 +40,9 @@
 @import "vendor/magnific-popup/magnific-popup";
 @import "print";
 
-
-#container {
-    width: 400px;
-    height: 300px;
-    overflow: hidden;
-}
-
-#photo {
+.banner-container .banner-img-container img {
     width: 1200px;
-    animation: switch 5s ease-out infinite;
-}
-
-#photo > img {
-    float: left;
-    width: 400px;
-    height: 300px;
-}
-
-@keyframes switch {
-
-    0%,
-    25% {
-        margin-left: 0;
-    }
-
-    35%,
-    60% {
-        margin-left: -400px;
-    }
-
-    70%,
-    100% {
-        margin-left: -800px;
-    }
+    height: 100%;
 }
 
 
